# trading-bot

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: ontology-hardening-progress.md  progress.md
config/: env.example
deploy/: compose.yml
docs/: README.md  ROADMAP.md  V1-LEDGER.md  trading-bot-research.md
docs/adr/: 0001-evidence-gated-two-broker-live-v1.md  0002-separate-custody-observations-from-os-intention.md  0003-separate-product-capability-from-semantic-activation.md  0004-split-ontology-schema-from-instance-validation.md  0005-model-issuer-as-time-scoped-role.md  0006-own-the-domain-agent-harness-and-contain-langgraph.md  0007-use-llm-role-as-the-only-provider-boundary.md  0008-sandbox-tools-as-node-scoped-capabilities-and-gateway-remote-mcp.md  0009-keep-the-agent-run-ledger-canonical-over-framework-checkpoints.md  0010-govern-agent-evolution-through-proposals-not-runtime-self-modification.md  0011-version-operational-event-schemas-and-keep-stream-order-store-owned.md
docs/audit/: v1-ledger-tasks.json
docs/handoffs/: 2026-07-22-domain-agent-architecture-planning-handoff.md
docs/operations/: domain-agent-shadow-runbook.md
docs/research/: 01-broker-landscape.md  02-architecture-patterns.md  03-signal-catalog.md  04-moa-adversarial-synthesis.md  05-causal-analysis-synthesis.md  06-india-mechanics.md  07-us-sleeve-legal.md  08-adversarial-design-review-research-brief.md  09-adversarial-findings-validation.md  09a-broker-protection.md  09b-fema-lrs.md  09c-india-mechanics.md  09d-seam-typesafety.md  09e-eventsourcing-recovery.md  09f-data-snapshot-testability.md  11-trading-world-ontology.md  12-trading-world-ontology-moa-review.md  12a-trading-world-ontology-moa-validation.md  13-live-domain-opportunity-audit.md  14-portfolio-family-multi-asset-moa-synthesis.md  17-domain-agent-harness-evaluation.md  18-domain-agent-source-tool-profiles.md  19-india-event-source-catalog.md
docs/runbooks/: day-10-policy-change.md  incidents.md  live-v1.md
docs/superpowers/plans/: 2026-07-21-trading-os-v1-implementation.md  2026-07-21-trading-world-ontology-implementation.md  2026-07-22-nine-day-live-v1-implementation.md  2026-07-22-ontology-hardening-implementation.md  2026-07-23-domain-agent-framework-spikes.md  2026-07-23-domain-agent-p0-tracer.md  2026-07-23-ws1-kernel-hardening-implementation.md  2026-07-24-live-source-watcher.md
docs/superpowers/specs/: 2026-07-20-trading-os-design.md  2026-07-21-trading-world-ontology-design.md  2026-07-22-live-v1-architecture-amendment.md  2026-07-23-domain-agent-architecture.md  2026-07-23-ws1-kernel-hardening-design.md  2026-07-24-live-source-watcher-design.md
migrations/: env.py
migrations/versions/: 0001_event_ledger.py
ontology/: core.ttl
ontology/modules/: beliefstate.ttl  events.ttl  evidence.ttl  governance.ttl  identity.ttl  markers.ttl  portfolio.ttl  provenance.ttl  time.ttl  tradability.ttl
ontology/modules/shapes/: events.shacl.ttl  identity.shacl.ttl  portfolio.shacl.ttl  provenance.shacl.ttl  time.shacl.ttl
ontology/shapes/: core.shacl.ttl
src/trading_os/agents/: capabilities.py  composition.py  corporate_events.py  harness.py  langgraph_engine.py  ledger.py  llm.py  models.py  profiles.py  providers.py  registry.py  trajectory.py
src/trading_os/app/: api.py  cli.py  container.py  readiness.py  scheduler.py  settings.py
src/trading_os/brokers/: alpaca.py  fake.py  kite.py  mapping.py  models.py  ports.py
src/trading_os/decision/: compliance.py  eligibility.py  models.py  risk.py  sizing.py
src/trading_os/discovery/: models.py  momentum.py  registry.py
src/trading_os/execution/: coordinator.py  kill_state.py  models.py  protection.py  reconciliation.py  reservations.py
src/trading_os/identity/: models.py
src/trading_os/kernel/: events.py  ids.py  values.py
src/trading_os/ledger/: replay.py  store.py  tables.py
tests/live_readiness/: test_alpaca_readiness.py  test_authority_receipt.py  test_kite_readiness.py
tests/replay/: conftest.py  test_two_broker_cycle.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: operator.spec.ts
web/src/: App.test.tsx  App.tsx  api.ts
(+187 files in other folders)
