[project]
name = "trading-bot"
version = "0.1.0"
description = "Intelligent multi-market equity trading bot (NSE/BSE, NYSE/NASDAQ, XETRA)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "kiteconnect>=5.0",
    "smartapi-python>=1.3",
    "ib_insync>=0.9",
    "polygon-api-client>=1.13",
    "alpaca-py>=0.26",
    "pandas>=2.2",
    "numpy>=1.26",
    "structlog>=24.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyotp>=2.9",   # TOTP for broker 2FA
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]
backtest = [
    "vectorbt>=0.26",
    "jupyter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require live/paper broker connections)",
]
