[project]
name = "trading-os"
version = "0.1.0"
description = "Evidence-gated two-broker cash-equity Trading OS"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "alpaca-py>=0.26",
  "anthropic>=0.117,<0.118",
  "apscheduler>=3.10",
  "asyncpg>=0.29",
  "exchange-calendars>=4.5",
  "fastapi>=0.115",
  "httpx>=0.27",
  "kiteconnect>=5.0",
  "neo4j>=5.23",
  "numpy>=1.26",
  "openai>=2.46,<2.47",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyshacl>=0.26",
  "rdflib>=7.0",
  "sqlalchemy[asyncio]>=2.0",
  "structlog>=24.0",
  "uvicorn[standard]>=0.30",
  "valkey>=6.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_os"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
testpaths = ["tests"]
markers = [
  "contract: normalized broker contract tests",
  "integration: local service integration tests",
  "live_readiness: read-only tests requiring explicit broker credentials",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true

# The OpenAI and Anthropic SDKs ship ``py.typed`` and transitively re-export
# numpy's typed API. numpy's bundled stubs use a 3.12+ ``type`` statement that
# mypy rejects under the project's 3.11 target, so skip following the provider
# SDK type graphs. Project code is still checked against their public surface.
[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
